bugfix, added getCardsUnder method to manuscript